# fence

./: CMakeLists.txt  README.md  config_lin.json  test.txt
include/: converterjson.h  cosine.h  predicates.h  vect.h
src/: CMakeLists.txt  converterjson.cpp  main.cpp  predicates.cpp  vect.cpp
tests/: CMakeLists.txt  vecttests.cpp
tests/cases/: 1-1.json  1-2.json  1-3.json  1-4.json  1-5-2.json  1-5.json  1-6.json  1-7.json  2-1.json  2-2.json  2-3.json  3-1.json  3-2.json  3-3.json  4-1.json  4-2.json  4-3.json  4-4.json  i1-1.json  i1-2.json  i1-3.json  i1-4.json  l1.json  minmax.json
